# NPC

./: .gitignore  README.md  pyproject.toml
addon/: npc_pack.mcaddon
addon/NPCPack_BP/: manifest.json
addon/NPCPack_BP/entities/: adventurer.json  anchor.json  archer.json  blacksmith.json  butcher.json  dworf.json  farmer.json  farmermaxvers.json  guard.json  guardcyan.json  guardgreen.json  guardorange.json  guardparts.json  guardpink.json  guardpurple.json  guardred.json  guardyellow.json  king.json  kingdom_guardian.json  lootbag.json  mageshaman.json  minecart.json  miner.json  npc.json  npcgreeting.json  pirate.json  tap.json  tavern.json  throne.json  wizard.json
addon/NPCPack_RP/: manifest.json
addon/NPCPack_RP/animations/: adventurer.animation.json  archer.animation.json  blacksmith.animation.json  butcher.animation.json  (+20 more)
java_npc/animations/: adventurer.animation.json  archer.animation.json  bard.animation.json  blacksmith.animation.json  butcher.animation.json  farmer.animation.json  guard.animation.json  king.animation.json  miner.animation.json  tavern.animation.json  wizard.animation.json
java_npc/blueprints/: archer.bbmodel  blacksmith.bbmodel  butcher.bbmodel  farmer.bbmodel  guard.bbmodel  guardcyan.bbmodel  guardgreen.bbmodel  guardorange.bbmodel  guardparts.bbmodel  guardpink.bbmodel  guardpurple.bbmodel  guardred.bbmodel  guardyellow.bbmodel  npcgreeting.bbmodel  wizard.bbmodel
src/endstone_npc/: __init__.py  addon_types.json  config.toml  entity_types.py  npc_manager.py  plugin.py
tools/: bbmodel2bedrock.py  make_npc_texture.py
(+75 files in other folders)
